# universityms

./: .gitignore  manage.py  pyproject.toml
unims/: asgi.py  settings.py  urls.py  wsgi.py
